# UNCC-ITCS-5122-Group

./: .env.example  .gitignore  README.md  Team-10-Notebook.ipynb  app.py  data-exploration.ipynb  data_loader.py  phase1.py  phase2.py  phase3.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: secrets.toml.example
