[project]
name = "team-10-economic-recovery-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "requests>=2.31.0",
    "plotly>=5.14.0",
    "scipy>=1.11.0",
    "streamlit>=1.32.0",
    "google-genai>=1.0.0",
]
